more error handling (#306)
Co-authored-by: imakunin <imakunin@yandex-team.ru>
Co-authored-by: tomato <tomato@yandex-team.ru>
Co-authored-by: Aleksey Zubakov <aleks.zubakov@gmail.com>